--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
+    "sequelize-hierarchy": "^2.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
